--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^18.2.0",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
