--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.22.7",
     "apexcharts": "^4.3.0",
     "cra-template": "1.2.0",
+    "package.json": "^2.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
