--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "antd": "^5.22.7",
     "apexcharts": "^4.3.0",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "install": "^0.13.0",
+    "npm": "^11.0.0",
+    "package.json": "^2.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
+    "stream-http": "^3.2.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
